fix: ajustado overflow-x do site

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -163,5 +163,9 @@
     }
     body {
         @apply bg-background text-foreground;
+        overflow-x: hidden;
+    }
+    html {
+        overflow-x: hidden;
     }
 }
